# sec-parser

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  agreement_parser_enhanced.py  agreement_parser_enhanced_main.py  agreement_parser_enhanced_part2.py  agreement_parser_enhanced_part3.py  agreement_parser_v11.py  agreement_parser_v12.py  agreement_parser_v5.py  agreement_parser_v6.py  agreement_parser_v8.py  complete_parser.py  example.py  generate_semantic_trees.py  generate_tree_visualization.py  instructions_beta.md  mypy.ini  pyproject.toml  test_confidential_merging.py  test_space_preservation.py  tmp.txt
.devcontainer/: devcontainer.json  example.py  requirements.txt  setup.txt
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: cd.yml  check.yml  ci.yml  release.yml
.streamlit/: config.toml
debug_tools/parser_output_visualizer/: _sec_parser.py  _sec_parser_library_facade.py  _secapio_api_key_getter.py  _ui.py  _utils.py  app.py
dev_utils/core/: config.py  profiled_parser.py  sec_edgar_reports_getter.py
dev_utils/dashboard_app/: app.py  constants.py  python_utils.py  select_reports.py  streamlit_utils.py
dev_utils/debug_dashboard/: app.py  cache_utils.py  general_utils.py  sec_data_retrieval.py  sec_utils.py  streamlit_utils.py
dev_utils/profiler/: __main__.py
dev_utils/semantic_visualization/: app.py  const.py  sp_utils.py
docs/: README-pypi.md  rtd_requirements.txt
docs/source/: conf.py  index.md
html_files/: agreement_01.html  agreement_02.html  agreement_03.html  agreement_04.html  agreement_05.html  agreement_06.html  agreement_07.html  agreement_08.html  agreement_09.html  agreement_10.html  agreement_11.html  agreement_12.html  agreement_13.html  agreement_14.html  agreement_15.html
sec_parser/: __init__.py  entry_facades.py  exceptions.py  hello.py  sec_parser_facade.py  sec_parsing_entry.py
sec_parser/_data_retrievers/: __init__.py  sec_api_io_retriever.py
sec_parser/data_retrievers/: __init__.py  _abstract_sec_data_retriever.py  _sec_api_io_retriever.py  _sec_edgar_types.py  sec_api_io_retriever.py  sec_data_retriever.py
sec_parser/data_sources/: __init__.py  abstract_sec_data_retriever.py  sec_api_io_data_retriever.py  sec_edgar_enums.py  sec_edgar_types.py  sec_edgar_utils.py  secapio_data_retriever.py
sec_parser/engine/: __init__.py  _abstract_html_parser.py  _html_parser.py  _sec_parser.py
sec_parser/entities/: __init__.py  _abstract_elements.py  _elements.py  _html_tag.py  _title_element.py  exceptions.py
sec_parser/exceptions/: __init__.py  _base_exceptions.py  core_exceptions.py
sec_parser/parsing_engine/: __init__.py  abstract_html_parser.py  abstract_parser.py  abstract_root_tag_parser.py  abstract_sec_parser.py  html_parser.py  html_tag.py  root_tag_parser.py  sec_parser.py
sec_parser/parsing_plugins/: __init__.py  abstract_elementwise_plugin.py  abstract_parsing_plugin.py  contentless_plugin.py  footnote_and_bulletpoint_plugin.py  highlighted_text_plugin.py  image_plugin.py  irrelevant_element_plugin.py  parsing_plugin_factory.py  root_section_plugin.py  table_plugin.py  text_plugin.py  title_plugin.py
sec_parser/plugins/: __init__.py  _abstract_parsing_plugin.py  _plugin_factory.py  _root_section_plugin.py  _text_plugin.py  _title_plugin.py
sec_parser/processing_engine/: __init__.py  abstract_parser.py  core.py  create_unclassified_elements.py  html_tag.py  html_tag_parser.py  processing_log.py  sec_parser.py  types.py
sec_parser/processing_steps/: __init__.py  abstract_elementwise_processing_step.py  abstract_processing_step.py  composite_element_creator.py  empty_element_classifier.py  footnote_and_bulletpoint_parsing_step.py  highlighted_text_classifier.py  highlighted_text_parsing_step.py  image_classifier.py  image_parsing_step.py  introductory_section_classifier.py  irrelevant_element_classifier.py  irrelevant_elements_classifier.py  page_header_classifier.py  page_number_classifier.py  pre_top_level_section_pruner.py  root_section_parsing_step.py  supplementary_text_classifier.py  table_classifier.py  table_of_contents_classifier.py  table_parsing_step.py  text_classifier.py  text_element_merger.py  text_parsing_step.py  title_classifier.py  title_parsing_step.py  title_plugin.py  top_level_section_manager.py  top_level_section_manager_for_10q.py  top_level_section_title_classifier.py  top_section_manager.py  top_section_manager_for_10q.py
sec_parser/semantic_elements/: __init__.py  abstract_semantic_element.py  abstract_semantic_elements.py  base_semantic_element.py  composite_semantic_element.py  convert_from.py  highlighted_element.py  highlighted_text_element.py  page_element.py  semantic_elements.py  table_element.py  table_parser.py  title_element.py  (+5 more)
semantic_tree/: agreement_01_semantic_tree.json  agreement_01_summary.txt  agreement_01_tree_viz.txt  agreement_02_semantic_tree.json  agreement_02_summary.txt  agreement_02_tree_viz.txt  agreement_03_semantic_tree.json  agreement_03_summary.txt  agreement_03_tree_viz.txt  agreement_04_semantic_tree.json  agreement_04_summary.txt  agreement_04_tree_viz.txt  agreement_05_semantic_tree.json  agreement_05_summary.txt  agreement_05_tree_viz.txt  agreement_06_semantic_tree.json  agreement_06_summary.txt  agreement_06_tree_viz.txt  agreement_07_semantic_tree.json  agreement_07_summary.txt  agreement_07_tree_viz.txt  agreement_08_semantic_tree.json  agreement_08_summary.txt  agreement_08_tree_viz.txt  agreement_09_semantic_tree.json  agreement_09_summary.txt  agreement_09_tree_viz.txt  agreement_10_semantic_tree.json  agreement_10_summary.txt  agreement_10_tree_viz.txt  agreement_11_semantic_tree.json  agreement_11_summary.txt  agreement_11_tree_viz.txt  agreement_12_semantic_tree.json  agreement_12_summary.txt  agreement_12_tree_viz.txt  agreement_13_semantic_tree.json  agreement_13_summary.txt  agreement_13_tree_viz.txt  agreement_14_semantic_tree.json  (+8 more)
tests/: _sec_parser_validation_data.py  conftest.py  test_hello.py  types.py  utils.py
(+212 files in other folders)
